added new text logo

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,8 @@
                <div class="position-sticky pt-2">
                   <div class="text-center justify-content-center">
                      <img src="/images/yuts-logo.png" style="width: calc(75px + 1.55vw); height: auto;">
-                     <p class="px-auto logo dynamic-text-xl"><strong><em>YUTS</em></strong></p>
+                     <br>
+                     <img class="pt-1" src="/images/yuts-text.png" style="width: calc(50px + 1.55vw); height: auto;">
                   </div>
                   <div class="card text-center mt-3">
                      <div class="card-header py-3">
